--- a/start_page/templates/start_page/start_page.html
+++ b/start_page/templates/start_page/start_page.html
@@ -5,40 +5,262 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}">
 
 </head>
 <body>
+  
   <table class="table">
   <thead>
     <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Title</th>
-      <th scope="col">Author</th>
-      <th scope="col">Description</th>
-      <th scope="col">Price</th>
+      <th colspan="7">&nbsp;&nbsp;<i class="fa-regular fa-file" onclick="createNew()" title="Создать новую запись"></i>&nbsp;&nbsp;
+        <i class="fa fa-cog" onclick="showSettings()" aria-hidden="true" title="Редактировать таблицу"></i></th>
+    </tr>
+    <tr>
+      <th class="edit" scope="col">Изменить</th>
+      <th class="column_name" scope="col">Название</th>
+      <th class="column_title"  scope="col">Заголовок</th>
+      <th class="column_author"  scope="col">Автор</th>
+      <th class="column_description"  scope="col">Описание</th>
+      <th class="column_price"  scope="col">Цена</th>
+      <th class="delete" scope="col">Удалить</th>
     </tr>
   </thead>
-  <tbody>
-  {% for book in books %}
-    <tr>
-      <td>{{ book.name }}</td>
-      <td>{{ book.title }}</td>
-      <td>{{ book.author }}</td>
-      <td>{{ book.description }}</td>
-      <td>{{ book.price }}</td>
-    </tr>
-  {% endfor %}
-
+  <tbody id="table_body">
+ 
   </tbody>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Настройки таблицы</h5>
+        
+      </div>
+      <div class="modal-body">
+
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><label for="column_name_id">Название</label></td>
+              <td><input class="col_settings" type="checkbox" id="column_name_id" col="column_name" onclick="changeTable(this)"></td>
+            </tr>
+            <tr>
+              <td><label for="column_title_id">Заголовок</label></td>
+              <td><input class="col_settings" type="checkbox" id="column_title_id" col="column_title" onclick="changeTable(this)"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_author_id">Автор</label></td>
+              <td><input class="col_settings" type="checkbox" id="column_author_id" col="column_author" onclick="changeTable(this)"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_description_id">Описание</label></td>
+              <td><input class="col_settings" type="checkbox" id="column_description_id" col="column_description" onclick="changeTable(this)"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_price_id">Цена</label></td>
+              <td><input class="col_settings" type="checkbox" id="column_price_id" col="column_price" onclick="changeTable(this)"><br></td>
+            </tr>
+          </tbody>
+        </table>
+                
+      </div>
+      <div class="modal-footer">
+        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="hideSettings()">Закрыть</button> -->
+        <button type="button" class="btn btn-primary" onclick="sendSettings()">Сохранить</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="createModalLabel">Создание нового объекта</h5>
+        
+      </div>
+      <div class="modal-body">
+
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><label for="column_name_id">Название</label></td>
+              <td><input class="col_create" type="text" id="create_name_id" col="name"></td>
+            </tr>
+            <tr>
+              <td><label for="column_title_id">Заголовок</label></td>
+              <td><input class="col_create" type="text" id="create_title_id" col="title"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_author_id">Автор</label></td>
+              <td><input class="col_create" type="text" id="create_author_id" col="author"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_description_id">Описание</label></td>
+              <td><input class="col_create" type="text" id="create_description_id" col="description"><br></td>
+            </tr>
+            <tr>
+              <td><label for="column_price_id">Цена</label></td>
+              <td><input class="col_create" type="number" min="0" max="99999" id="create_price_id" col="price"><br></td>
+            </tr>
+          </tbody>
+        </table>
+                
+      </div>
+      <div class="modal-footer">
+        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="hideSettings()">Закрыть</button> -->
+        <button type="button" class="btn btn-primary" onclick="sendNew()">Сохранить</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <script src="{% static 'jquery/jquery-3.6.4.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script>
   $( document ).ready(function() {
-      console.log( "ready!" );
+      
+    getProfile();
+    getBooks(); 
   });
+
+  function getBooks() {
+    $.get( '{% url "books_list" %}', function( data ) {
+      $( data ).each(function() {
+        // console.log(this.author);
+        $( "#table_body" ).append(
+          '<tr>' + 
+            '<td class="edit"><i class="fa-solid fa-pen-to-square"></i>' + 
+            '</td><td class="column_name" >' + this.name + '</td>' + 
+            '<td class="column_title" >' + this.title + '</td>' +
+            '<td class="column_author" >' + this.author + '</td>' +
+            '<td class="column_description" >' + this.description + '</td>' +
+            '<td class="column_price" >' + this.price + '</td>' + 
+            '<td class="delete"><i class="fa-solid fa-trash" onclick="deleteItem(+' + this.id + ')"></i></td>' +
+          '</tr>'
+        )
+      });
+    });
+  }
+
+  function deleteItem(number) {
+    console.log(number);
+    $.ajax({
+      url: "/books/" + number + "/",
+      type: 'DELETE',
+      success: function(data, textStatus, xhr) {
+        console.log(xhr.status)
+      }
+    });
+  }
+
+  function getProfile() {
+    $.get( '{% url "user_profile" 1 %}', function( data ) {
+      hideColumns(data);
+    });
+  }
+
+  function hideColumns(data) {
+
+    $.each(data, function(index, value){ 
+      // console.log(index + " : " + value);
+      if (index != "id") {
+        if (value === true) {
+          $( "." + index ).show();
+          $( "#" + index + "_id").attr("checked", "checked");
+        }
+        else {
+          $( "." + index ).hide();
+          $( "#" + index + "_id").removeAttr("checked");
+        }
+      }
+    });
+  };
+
+  function showSettings() {
+    $('#exampleModal').modal('show')
+  }
+
+  function hideSettings() {
+    $('#exampleModal').modal('hide')
+  }
+
+  function changeTable(column) {
+    var ch = $( column ).prop("checked");
+    var col_ = $(column).attr("col");
+
+    if (ch === true) {
+      $( "." + col_ ).show();
+    }
+    else {
+      $( "." + col_ ).hide();
+    }
+  }
+
+  function sendSettings() {
+    var obj = {};
+    $( ".col_settings" ).each(function() {
+      var ch = $( this ).prop("checked");
+      var col_ = $(this).attr("col");
+      obj[col_] = ch;
+    });
+    $.ajax({
+      url: "{% url 'user_profile' 1 %}",
+      type: 'PUT',
+      data: obj,
+      success: function(result) {
+        console.log(result)
+      }
+    });
+
+    hideSettings();
+
+  }
+
+  function createNew() {
+    $('#createModal').modal('show')
+  }
+
+  function sendNew() {
+    var obj = {};
+    $( ".col_create" ).each(function() {
+      var ch = $( this ).val();
+      var col_ = $(this).attr("col");
+      obj[col_] = ch;
+    });
+    console.log(obj);
+
+    $.ajax({
+      url: "{% url 'books_list' %}",
+      type: 'POST',
+      data: obj,
+      success: function(result) {
+        console.log("SUCCESS");
+        $( "#table_body" ).append(
+          '<tr>' + 
+            '<td class="edit"><i class="fa-solid fa-pen-to-square"></i>' + 
+            '</td><td class="column_name" >' + result.name + '</td>' + 
+            '<td class="column_title" >' + result.title + '</td>' +
+            '<td class="column_author" >' + result.author + '</td>' +
+            '<td class="column_description" >' + result.description + '</td>' +
+            '<td class="column_price" >' + result.price + '</td>' + 
+            '<td class="delete"><i class="fa-solid fa-trash" onclick="deleteItem(+' + result.id + ')"></i></td>' +
+          '</tr>'
+        )
+      }
+    });
+
+    $('#createModal').modal('hide')
+
+  }
+
 </script>
 
 </body>
